# fujitsu-airstage-uart

./: CMakeLists.txt  README.md
captures/: enable economy.sal  enable economy.sal.csv  enable energy saving fan.sal  enable energy saving fan.sal.csv  fan to auto 2.sal  fan to auto 2.sal.csv  fan to high.sal  fan to high.sal.csv  fan to low.sal  fan to low.sal.csv  fan to medium.sal  fan to medium.sal.csv  fan to quiet.sal  fan to quiet.sal.csv  firmware check.sal  firmware check.sal.csv  get firmware local.sal  get firmware local.sal.csv  heat 67 actual 68 outdoor 60.8.sal  heat 67 actual 68 outdoor 60.8.sal.csv  led off.sal  led off.sal.csv  led on.sal  led on.sal.csv  power up to heat 67.sal  power up to heat 67.sal.csv  set cool to 68.sal  set cool to 68.sal.csv  set heat to 68.sal  set heat to 68.sal.csv  set heat to 69.sal  set heat to 69.sal.csv  set to auto.sal  set to auto.sal.csv  set to cool.sal  set to cool.sal.csv  set to dry.sal  set to dry.sal.csv  set to fan.sal  set to fan.sal.csv  (+6 more)
include/fujitsu/: capture_reader.h  messages.h  packet.h  register_db.h
src/: capture_reader.cpp  dump_packets.cpp  messages.cpp  packet.cpp  register_db.cpp
